--- a/settings.org
+++ b/settings.org
@@ -1,5 +1,5 @@
 * Legacy dotemacs
-#+BEGIN_SRC emacs-lisp
+#+BEGIN_SRC emacs-lisp :tangle no
 ;;; -*- lexical-binding: t; mode: emacs-lisp -*-
 
 (dolist (path
@@ -54,7 +54,6 @@
 (global-set-key [f10] 'done-whats-next)
 (global-set-key (kbd "M-n") (lambda () (interactive) (scroll-up 1)))
 (global-set-key (kbd "M-p") (lambda () (interactive) (scroll-down 1)))
-(global-set-key (kbd "C-x C-b") 'ibuffer)
 (global-set-key (kbd "C-x o") 'ace-window)
 (global-set-key (kbd "C-c p") 'winner-undo)
 (global-set-key (kbd "C-c n") 'winner-redo)
@@ -125,55 +124,6 @@
 
 ;; PERSONAL FUNCTIONS
 
-(setq journal-file-path "g:/EQShare/Execution Engineers/Jay Cotton/jayslog.txt")
-(setq local-journal-file-path (file-truename "~/AppData/Roaming/jaysloglocal.txt"))
-
-(defun journal-entry-header (&optional prefix)
-  (let* ((weekdays '("Sunday" "Monday" "Tuesday" "Wednesday" "Thursday" "Friday" "Saturday"))
-         (today (nth (string-to-number (format-time-string "%w")) weekdays))
-	 (prefix-str (or prefix "***")))
-    (concat (format-time-string (concat prefix-str " %Y-%m-%d\n" prefix-str " %R\n" prefix-str " ")) today "\n\n")))
-
-(defun insert-journal-entry (&optional prefix)
-  (interactive)
-  (insert (journal-entry-header prefix)))
-
-(defun latest-at-top-entry (func &optional prefix)
-  (interactive)
-  (beginning-of-buffer)
-  (let ((bob (point)))
-    (re-search-forward "[^[:space:]\n]" nil t) ;goto first non-whitespace char
-    (backward-char 1)
-    (delete-region bob (point)))
-  (insert "\n\n")
-  (beginning-of-buffer)
-  (funcall func prefix))
-
-(let ((saved-buffer))
-  (defun toggle-journal-entry (file-path command-to-match &optional prefix)
-    (interactive)
-    (let ((cb (current-buffer)))
-      (if (equal (buffer-file-name) file-path)
-          (if (equal last-command command-to-match)
-              (latest-at-top-entry 'insert-journal-entry prefix)
-            (progn
-              (save-buffer)
-              (switch-to-buffer saved-buffer)))
-        (progn
-          (setq saved-buffer cb)
-          (find-file file-path))))))
-
-(defun toggle-journal-entry-shared ()
-  (interactive)
-  (toggle-journal-entry journal-file-path this-command))
-
-(defun toggle-journal-entry-local ()
-  (interactive)
-  (toggle-journal-entry local-journal-file-path this-command))
-
-(defun toggle-journal-entry-elisp ()
-  (interactive)
-  (toggle-journal-entry "c:/Users/JC30913/scratch.el" this-command ";;;"))
 
 (defun check-off ()
   (interactive)
@@ -274,6 +224,64 @@
 
 #+END_SRC
 * Current and Future Config
+** Keybindings
+#+BEGIN_SRC emacs-lisp :tangle yes
+(global-set-key [f4] 'toggle-journal-entry-elisp)
+(global-set-key [f5] 'toggle-journal-entry)
+(global-set-key (kbd "C-x C-b") 'ibuffer)
+#+END_SRC
+** Journal
+#+BEGIN_SRC emacs-lisp :tangle yes
+(setq journal-file-path "~/x.txt")
+
+(defun journal-entry-header (&optional prefix)
+  (let* ((weekdays '("Sunday" "Monday" "Tuesday" "Wednesday" "Thursday" "Friday" "Saturday"))
+         (today (nth (string-to-number (format-time-string "%w")) weekdays))
+	 (prefix-str (or prefix "***")))
+    (concat (format-time-string (concat prefix-str " %Y-%m-%d\n" prefix-str " %R\n" prefix-str " ")) today "\n\n")))
+
+(defun insert-journal-entry (&optional prefix)
+  (interactive)
+  (insert (journal-entry-header prefix)))
+
+(defun latest-at-top-entry (func &optional prefix)
+  (interactive)
+  (beginning-of-buffer)
+  (let ((bob (point)))
+    (re-search-forward "[^[:space:]\n]" nil t) ;goto first non-whitespace char
+    (backward-char 1)
+    (delete-region bob (point)))
+  (insert "\n\n")
+  (beginning-of-buffer)
+  (funcall func prefix))
+
+(let ((saved-buffer))
+  (defun toggle-journal-entry-helper (file-path command-to-match &optional prefix)
+    (interactive)
+    (let ((cb (current-buffer)))
+      (if (equal (expand-file-name (buffer-file-name)) (expand-file-name file-path))
+          (if (equal last-command command-to-match)
+              (latest-at-top-entry 'insert-journal-entry prefix)
+            (progn
+              (save-buffer)
+              (switch-to-buffer saved-buffer)))
+        (progn
+          (setq saved-buffer cb)
+          (find-file file-path))))))
+
+(defun toggle-journal-entry ()
+  (interactive)
+  (toggle-journal-entry-helper journal-file-path this-command))
+
+(defun toggle-journal-entry-elisp ()
+  (interactive)
+  (toggle-journal-entry-helper "~/scratch.el" this-command ";;;"))
+
+#+END_SRC
+** Basic Settings
+#+BEGIN_SRC emacs-lisp :tangle yes
+(setq debug-on-error t)
+#+END_SRC
 ** Language Modes
 *** q
 #+BEGIN_SRC emacs-lisp
